# jams

./: .ditz-config  .gitignore  .gitmodules  .readthedocs.yaml  .zenodo.json  AGENTS.md  CMakeLists.txt  LICENSE  MANUAL.md  Makefile  Makefile.in  README.md  TODO  TODO.md  cerr  jams.sublime-project  structure.xyz
src/jams/: CMakeLists.txt  common.cc  common.h  macros.h  main.cc  types.h  version.cc  version.h.in
src/jams/containers/: bimap.h  cell.cc  cell.h  csr.h  interaction_list.h  interaction_matrix.h  mat.h  mat3.h  material.h  multiarray.h  multiarray_numeric.h  name_id_map.h  neartree.h  ring_storage.h  sparse_matrix.h  sparse_matrix_builder.h  sparse_matrix_description.h  sparsematrix.cc  sparsematrix.h  sparsematrix4d.h  synced_memory.h  unitcell.cc  unitcell.h  unordered_vector_set.h  vec.h  vec3.h  vector_set.h
src/jams/core/: CMakeLists.txt  args.cc  args.h  base.cc  base.h  cell.cc  config.cc  cuda_array_kernels.cu  cuda_solver.cu  cuda_solver_kernels.cu  cuda_sparsematrix.cu  fft.cc  field.cc  globals.h  hamiltonian.cc  hamiltonian.h  interactions.cc  interactions.h  jams++.cc  jams++.h  lattice.cc  lattice.h  maths.cc  monitor.cc  monitor.h  noise_generator.h  output.cc  output.h  physics.cc  physics.h  rand.cc  rand.h  random.cc  solver.cc  solver.h  sparsematrix.cc  stats.cc  stevens_operator.cc  thermostat.cc  thermostat.h  (+3 more)
src/jams/cuda/: cuda-complex-operators.h  cuda-sparse-helpers.h  cuda_array_kernels.cu  cuda_array_kernels.h  cuda_array_reduction.cu  cuda_array_reduction.h  cuda_array_reduction.t.h  cuda_check_status.h  cuda_common.cu  cuda_common.h  cuda_defs.cc  cuda_defs.h  cuda_device_complex_ops.h  cuda_device_rk4.cuh  cuda_device_vector_ops.h  cuda_functional.h  cuda_legendre.h  cuda_minimum_image.cu  cuda_minimum_image.h  cuda_minimum_image_kernels.cuh  cuda_only_implementation_macro.h  cuda_solver.cc  cuda_solver.cu  cuda_solver.h  cuda_solver_kernels.cu  cuda_solver_kernels.h  cuda_sparse_interaction_matrix.h  cuda_sparsematrix.cu  cuda_sparsematrix.h  cuda_spin_ops.cu  cuda_spin_ops.h  cuda_stream.h  cuda_stride_reduce.h  cuda_types.h  cuda_vector_ops.h
src/jams/hamiltonian/: CMakeLists.txt  anisotropy_polynomial.cc  anisotropy_polynomial.h  anisotropy_polynomial_eval.h  anisotropy_uniaxial.cu  anisotropy_uniaxial.h  applied_field.cc  applied_field.h  biquadratic_exchange.cc  biquadratic_exchange.h  cpu_crystal_field.cc  cpu_crystal_field.h  crystal_field.cc  crystal_field.h  cubic_anisotropy.cc  cubic_anisotropy.h  cuda_anisotropy_polynomial.cu  cuda_anisotropy_polynomial.h  cuda_applied_field.cu  cuda_applied_field.h  cuda_applied_field_kernel.cuh  cuda_biquadratic_exchange.cu  cuda_biquadratic_exchange.h  cuda_biquadratic_exchange_kernel.cuh  cuda_crystal_field.cu  cuda_crystal_field.h  cuda_crystal_field_generator.nb  cuda_crystal_field_kernel.cuh  cuda_cubic_anisotropy.cu  cuda_cubic_anisotropy.h  cuda_cubic_anisotropy_kernel.cuh  cuda_dipole_bruteforce.cu  cuda_dipole_bruteforce.h  cuda_dipole_bruteforce_kernel.cuh  cuda_dipole_fft.cu  cuda_dipole_fft.h  cuda_dipole_sparse_tensor.cu  cuda_dipole_sparse_tensor.h  cuda_exchange.cu  cuda_exchange.h  (+85 more)
src/jams/helpers/: array_ops.h  consts.h  container_utils.h  cuda_exception.h  defaults.h  duration.h  error.cc  error.h  exception.h  fft.cc  fft.h  field.cc  field.h  filesystem.cc  filesystem.h  interaction_calculator.cc  interaction_calculator.h  interaction_list_helpers.cc  interaction_list_helpers.h  load.h  maths.cc  maths.h  mixed_precision.h  montecarlo.h  neutrons.cc  neutrons.h  output.cc  output.h  progress_bar.h  random.h  runningstat.h  slice.h  sort.h  spinops.cc  spinops.h  stats.cc  stats.h  timer.h  utils.cc  utils.h
src/jams/initializer/: init_bloch_domain_wall.cc  init_bloch_domain_wall.h  init_dispatcher.cc  init_dispatcher.h  init_domain_wall.cc  init_domain_wall.h  init_h5.cc  init_h5.h  init_skyrmion.cc  init_skyrmion.h  init_triple_q.cc  init_triple_q.h
src/jams/interface/: blas.h  config.cc  config.h  fft.cc  fft.h  h5.h  highfive.h  lapack_tridiagonal.cc  lapack_tridiagonal.h  openmp.h  randutils.h  sparse_blas.h  system.cc  system.h
src/jams/lattice/: interaction_neartree.cc  interaction_neartree.h  interaction_neartree.t.h  minimum_image.cc  minimum_image.h  minimum_image.t.h
src/jams/maths/: functions.cc  functions.h  interpolation.cc  interpolation.h  parallelepiped.cc  parallelepiped.h  tesseral_generator.nb  tesseral_harmonics.h
src/jams/metadynamics/: caching_collective_variable.cc  caching_collective_variable.h  collective_variable.cc  collective_variable.h  collective_variable_factory.cc  collective_variable_factory.h  collective_variable_potential.h  magnetisation_cv.cc  magnetisation_cv.h  metadynamics_potential.cc  metadynamics_potential.h  mz_orthogonal_mz_cv.cc  mz_orthogonal_mz_cv.h  skyrmion_center_cv.cc  skyrmion_center_cv.h
src/jams/monitors/: CMakeLists.txt  binary.cc  binary.h  boltzmann.cc  boltzmann.h  cuda-spin-current-kernel.cu  cuda-spin-current.cc  cuda-spin-current.h  cuda-thermal-current.cc  cuda_neutron_scattering_no_lattice.cu  cuda_neutron_scattering_no_lattice.h  cuda_neutron_scattering_no_lattice_kernels.cuh  cuda_neutron_scattering_nolattice.cu  cuda_neutron_scattering_nolattice.h  cuda_neutron_scattering_nolattice_kernel.cuh  cuda_spectrum_general.cu  cuda_spectrum_general.h  cuda_spectrum_general_kernel.cuh  cuda_spin_current.cc  cuda_spin_current.h  cuda_spin_current_kernel.cu  cuda_thermal_current.cc  cuda_thermal_current.h  cuda_thermal_current_kernel.cu  energy.cc  energy.h  field.cc  field.h  finite_difference_topological_charge.cc  finite_difference_topological_charge.h  hdf5.cc  hdf5.h  helicity_modulus.cc  helicity_modulus.h  hkl_index.h  kpoint_path_builder.cc  kpoint_path_builder.h  magnetisation.cc  magnetisation.h  magnetisation_layers.cc  (+47 more)
src/jams/physics/: CMakeLists.txt  empty.h  field_cool.cc  field_cool.h  fieldcool.cc  flips.cc  flips.h  fmr.cc  fmr.h  induced_spin_pulse.cc  induced_spin_pulse.h  mean_first_passage_time.cc  mfpt.cc  ping.cc  ttm.cc  (+6 more)
test/jams/: CMakeLists.txt  jams_test.cc  mock.h
(+750 files in other folders)
